For Issue comments: removed the auto generated <pre> tag from ScarabUtil.java and placed it together with an appropriate css style in the templates section. Now the text word wrap works again but simple preformatting (white spaces, line breaks) is still preserved.
git-svn-id: http://scarab.tigris.org/svn/scarab@9871 3c7165bb-d2ef-0310-b724-bafd9a86081f

--- a/trunk/src/webapp/style/scarab.css
+++ b/trunk/src/webapp/style/scarab.css
@@ -320,3 +320,14 @@ color:#003163
 background-color:#E9F1F9;
 color:#003163
 }
+/*
+   provide a cross browser compatible pre which uses auto 
+   word wrap for long lines: 
+*/
+pre {
+white-space: -moz-pre-wrap;
+white-space: -pre-wrap;
+white-space: -o-pre-wrap;
+white-space: pre-wrap;
+word-wrap: break-word;
+}
